# lerobot_ws

./: .gitignore  readme.md
so101_hw_interface/lerobot/common/: errors.py
so101_hw_interface/resource/: so101_hw_interface.xml  so101_read_steps
so101_hw_interface/scripts/: so101_calibrate  so101_read_steps
so101_hw_interface/so101_hw_interface/: __init__.py  motor_bridge.py  so101_system_interface.py
so101_hw_interface/so101_hw_interface/motors/: __init__.py
src/lerobot_controller/: CMakeLists.txt  package.xml
src/lerobot_controller/config/: so101_controllers.yaml
src/lerobot_controller/launch/: so101_controller.launch.py
src/lerobot_description/: CMakeLists.txt  package.xml
src/lerobot_description/launch/: so101_display.launch.py
src/lerobot_description/urdf/: so101.urdf.xacro  so101_base.xacro  so101_ros2_control.xacro
src/lerobot_moveit/: CMakeLists.txt  package.xml
src/lerobot_moveit/config/: kinematics.yaml  moveit.rviz  moveit_controllers.yaml  pilz_cartesian_limits.yaml
src/lerobot_moveit/launch/: so101_moveit_launch.py
src/so101_hw_interface/: package.xml  setup.py
src/so101_hw_interface/config/: so101_controllers.yaml
src/so101_hw_interface/launch/: so101_hw.launch.py
src/so101_hw_interface/resource/: so101_hw_interface.xml
src/so101_hw_interface/scripts/: so101_motor_bridge
src/so101_hw_interface/so101_hw_interface/: calibrate_arm.py  motor_bridge.py  read_motor_steps.py  so101_system_interface.py
src/so101_hw_interface/urdf/: so101_follower.urdf
src/so101_servo/: package.xml  setup.cfg  setup.py
(+7 files in other folders)
